<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!--linear layout was used because the layout is a simple vertical one
     where the views are stacked on top of each other that can be
     achieved easily using a vertically oriented linearlayout-->
<LinearLayout

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginBottom="@dimen/margin"
    android:orientation="vertical">

    <TextView
        android:id="@+id/email_text"
        style="@style/textview_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin"
        android:layout_weight="1"
        android:gravity="start"
        android:text="@string/email" />

    <EditText
        android:id="@+id/email_edit"
        style="@style/textview_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:fontFamily="@font/roboto"
        android:hint="@string/enter_your_email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/password_text"
        style="@style/textview_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginBottom="@dimen/margin"
        android:gravity="center_horizontal"
        android:text="@string/password" />

    <EditText
        android:id="@+id/password_edit"
        style="@style/textview_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:fontFamily="@font/roboto"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/new_login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginBottom="@dimen/margin"
        android:layout_weight="1"
        android:backgroundTint="#4FEC56"
        android:text="@string/new_login" />

    <Button
        android:id="@+id/existing_account_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:backgroundTint="#03A9F4"
        android:text="@string/existing_account" />
</LinearLayout>
</layout>