<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="com.udacity.shoestore.StringDoubleConverter"/>
        <variable
            name="newShoe"
            type="com.udacity.shoestore.models.Shoe" />
    </data>

    <!--Constraint layout was used because it helps positioning the views flexibly in different positions without
      the need of nesting layouts and view groups-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/specifications_text"
            style="@style/textview_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/very_large_margin"
            android:text="@string/enter_specifications"
            android:textAlignment="center"
            android:textSize="@dimen/large_font_size"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/shoe_name_text"
            style="@style/textview_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/shoe_name"
            app:layout_constraintBottom_toTopOf="@+id/company_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/specifications_text" />

        <TextView
            android:id="@+id/company_text"
            style="@style/textview_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/company"
            app:layout_constraintBottom_toTopOf="@+id/shoe_size_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoe_name_text" />

        <TextView
            android:id="@+id/shoe_size_text"
            style="@style/textview_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/shoe_size"
            app:layout_constraintBottom_toTopOf="@+id/description_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/company_text" />

        <TextView
            android:id="@+id/description_text"
            style="@style/textview_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/description"
            app:layout_constraintBottom_toTopOf="@+id/image_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoe_size_text" />

        <EditText
            android:id="@+id/shoe_name_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="@string/enter_shoe_name"
            android:inputType="text"
            android:minHeight="48dp"
            android:text="@={newShoe.name}"
            app:layout_constraintBaseline_toBaselineOf="@+id/shoe_name_text"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/company_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="@string/enter_company"
            android:inputType="text"
            android:minHeight="48dp"
            android:text="@={newShoe.company}"
            app:layout_constraintBaseline_toBaselineOf="@+id/company_text"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/shoe_size_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="@string/enter_shoe_size"
            android:inputType="number"
            android:minHeight="48dp"
            android:text="@={StringDoubleConverter.toString(newShoe.size)}"
            app:layout_constraintBaseline_toBaselineOf="@+id/shoe_size_text"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/description_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="@string/enter_description"
            android:inputType="textImeMultiLine"
            android:minHeight="48dp"
            android:text="@={newShoe.description}"
            app:layout_constraintBaseline_toBaselineOf="@+id/description_text"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/save_button"
            style="@style/textview_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#4FEC56"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/cancel_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/specifications_text"
            app:layout_constraintVertical_bias="0.854" />

        <Button
            android:id="@+id/cancel_button"
            style="@style/textview_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#F3645A"
            android:text="@android:string/cancel"
            app:layout_constraintBaseline_toBaselineOf="@+id/save_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/save_button" />

        <ImageButton
            android:id="@+id/upload_image_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@android:color/darker_gray"
            app:layout_constraintBottom_toBottomOf="@+id/image_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description_edit"
            app:srcCompat="@android:drawable/ic_menu_upload"
            app:layout_constraintStart_toEndOf="@id/barrier"/>

        <TextView
            android:id="@+id/image_text"
            style="@style/textview_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/image"
            app:layout_constraintBottom_toTopOf="@+id/save_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description_text" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierAllowsGoneWidgets="false"
            app:barrierDirection="start"
            app:constraint_referenced_ids="shoe_name_edit,description_edit,company_edit,shoe_size_edit"
            tools:layout_editor_absoluteX="187dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>